Fix initial seek on startup. Adjust readable audio buffer step if there's not enough frames in a specified range. Fix no audio mode

--- a/src/ui/ui.css
+++ b/src/ui/ui.css
@@ -71,8 +71,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 220px;
-  height: 112px;
+  width: 230px;
+  height: 140px;
   opacity: 0.7;
   background-color: white;
   white-space: pre-line;
